# aplane-sdks

./: Makefile  README.md
.github/workflows/: publish-sdks.yml
contracts/signerapi/: README.md  admin_generate_request_generic.json  admin_generate_response_generic.json  keys_response_generic.json  keytypes_response_full.json
docs/: USER_SDK_GO.md  USER_SDK_PYTHON.md  USER_SDK_TYPESCRIPT.md
go/: README.md  client.go  client_test.go  doc.go  go.mod  integration_test.go  types.go  types_contract_test.go  types_test.go
go/examples/asa_transfer/: main.go
go/examples/atomic_swap/: main.go
go/examples/hashlock_claim/: main.go
go/examples/send/: main.go
python/: README.md  pyproject.toml
python/aplane/: __init__.py  algokit.py  signer.py
python/examples/: algokit_self_send.py  asa_transfer.py  atomic_swap.py  htlc_claim.py  send.py
python/tests/: test_algokit.py  test_client.py  test_contracts.py  test_integration.py
scripts/: preflight-integration.sh
typescript/: README.md  index.d.ts  index.js  package-lock.json  package.json
typescript/examples/: algokit_self_send.ts  asa_transfer.ts  atomic_swap.ts  htlc_claim.ts  send.ts
typescript/integration/: live_signer.test.ts
typescript/src/: algokit.ts  client.ts  index.ts  types.ts
typescript/tests/: algokit.test.ts  client.test.ts  contracts.test.ts
