[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aplane"
dynamic = ["version"]
description = "Historical handoff package for the APlane SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "APlane Project LLC" }
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["algorand", "blockchain", "signing", "sdk"]

[project.urls]
Homepage = "https://github.com/aplane-algo/aplanesdk"
Documentation = "https://github.com/aplane-algo/aplanesdk"
Repository = "https://github.com/aplane-algo/aplanesdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["aplane*"]

[tool.setuptools.dynamic]
version = {attr = "aplane._version.__version__"}
